# SlicerSeqSeg

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  SeqSeg.json  setup_dependencies.py
seqseg/: CMakeLists.txt  seqseg.py
seqseg/Resources/UI/: seqseg.ui  seqseg_original.ui
